# Project-Gamma---Logistics

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_document_intelligence.py  003_cost_allocation_rag.py  004_guardrails_production.py  005_phase5_document_relationships.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/anomaly_flagger/: detectors.py  service.py
backend/app/api/: router.py
backend/app/audit_generator/: report_generator.py  service.py
backend/app/cost_allocator/: __init__.py  pipeline.py  rules.py
backend/app/document_extractor/: __init__.py  classifier.py  parser.py  pipeline.py
backend/app/eval/: __init__.py  extraction_eval.py  metrics.py  rag_eval.py
backend/app/hitl_workflow/: service.py  triggers.py
backend/app/matching_engine/: matchers.py  service.py
backend/app/mcp_server/: __main__.py  data_layer.py  mock_data.py  server.py
backend/app/middleware/: logging.py
backend/docs/: phase5-devils-advocate.md  phase5-research.md  phase5-security-review.md
backend/tests/: conftest.py  test_anomaly.py  test_audit.py  test_classifier.py  test_claude_service.py  test_cost_allocation.py  test_documents.py  test_eval.py  test_health.py  test_hitl.py  test_mcp.py  test_parser.py  test_phase5_matching.py  test_phase5_relationships.py  test_phase5_schemas.py  test_phase5_stress.py  test_pipeline.py  test_rag.py  test_reconciliation.py
frontend/: Dockerfile  (+3 more)
(+115 files in other folders)
